--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: levi@theviewfromhere.com.au
 description: > # this means to ignore newlines until "baseurl:"
   
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://quickrealestte.com.au" # the base hostname & protocol for your site
+url: "http://theviewfromhere.com.au/_QRE/dev" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
