added alerts pages, edit / add / delete modals, icon font

--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,6 @@ url: "http://theviewfromhere.com.au/_QRE/dev" # the base hostname & protocol for
 
 # Build settings
 markdown: kramdown
+
+gems:
+  - bourbon
