added _posts folder with some basic posts (copied from credited developer) - added archive page & updated config / header / archive to link correclty with "prepend baseurl". Removed sass-cache folder with gitignore and tested jekyll server. Need to add begin working through dev pipeline

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ phone:  #human readable output
 phone-link: #just numbers uses tel: for hyperlink
 description: > #add new lines after '>'
   
-baseurl: "/"
+baseurl: ""
 url: ""
 twitter_username: 
 facebook_username: 
